--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,5 +14,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: https://gist.github.com/Odyflame/ 9842e074b8ee46aef76fd0d493bae0ed 
+          GIST_ID: https://gist.github.com/Odyflame/4340eb88eec39a80f8e2ef55b4a439bf
           TIMEZONE: Asia/South_Korea
