--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -15,4 +15,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ screts.GIST_ID }}
-          TIMEZONE: Asia/South_Korea
+          TIMEZONE: America/New_York
